<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FridgeManager</string>
    <string name="tab_ingredients">Ingredients</string>
    <string name="tab_recipes">Recipes</string>
    <string name="tab_statistics">Statistics</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="edit_ingredient">Edit Ingredient</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="total_ingredients">Total</string>
    <string name="expiring_soon">Expiring Soon</string>
    <string name="expired">Expired</string>
    <string name="search_ingredients">Search ingredients</string>
    <string name="search_recipes">Search recipes</string>
    <string name="all">All</string>
    <string name="can_make">Can Make</string>
    <string name="quick_meal">Quick Meal</string>
    <string name="category">Category</string>
    <string name="category_vegetable">Vegetable</string>
    <string name="category_fruit">Fruit</string>
    <string name="category_meat">Meat</string>
    <string name="category_dairy">Dairy</string>
    <string name="category_seafood">Seafood</string>
    <string name="category_egg">Egg</string>
    <string name="category_grain">Grain</string>
    <string name="category_seasoning">Seasoning</string>
    <string name="category_canned">Canned</string>
    <string name="category_frozen">Frozen</string>
    <string name="category_other">Other</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="expire_date">Expire Date</string>
    <string name="notes_optional">Notes (Optional)</string>
    <string name="please_fill_required">Please fill all required fields</string>
    <string name="no_ingredients">No ingredients yet</string>
    <string name="add_ingredient_hint">Tap the add button to create your first ingredient</string>
    <string name="no_recipes">No recipes yet</string>
    <string name="ingredient_photo">Ingredient Photo</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="can_make_now">Can make now</string>
    <string name="delete_ingredient_confirm">Delete %1$s?</string>
    <string name="ingredient_detail">Ingredient Detail</string>
    <string name="recipe_detail">Recipe Detail</string>
    <string name="image_preview">Image Preview</string>
    <string name="change_photo">Change Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="confirm_delete_photo">Delete Photo</string>
    <string name="delete_photo_confirm_message">Are you sure you want to delete this photo?</string>
    <string name="select_photo">Select Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="photo_updated">Photo updated</string>
    <string name="ingredient_updated">Ingredient updated</string>
    <string name="ingredient_deleted">Ingredient deleted</string>
    <string name="status_normal">Normal</string>
    <string name="status_warning">Warning</string>
    <string name="status_expiring_soon">Expiring Soon</string>
    <string name="status_expired">Expired</string>
    <string name="no_expire_date">No expire date</string>
    <string name="added_on">Added on %1$s</string>
    <string name="expires_today">Expires today</string>
    <string name="expires_tomorrow">Expires tomorrow</string>
    <string name="days_left">%1$d days left</string>
    <string name="expired_days_ago">Expired %1$d days ago</string>
    <string name="cooking_time_format">%1$d min</string>
    <string name="servings_format">%1$d servings</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="can_make_optional_missing">Can make with optional items missing</string>
    <string name="missing_ingredients_format">Missing %1$d essential ingredients</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="share_recipe_subject">Recipe: %1$s</string>
    <string name="share_via">Share via</string>
    <string name="image_load_failed">Failed to load image</string>
    <string name="share_image">Share image</string>
    <string name="image_saved">Image saved</string>
    <string name="save_failed">Save failed</string>
    <string name="share_failed">Share failed</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="wallpaper_set_failed">Failed to set wallpaper</string>
    <string name="more_options">More Options</string>
    <string name="choose_photo">Choose photo</string>
    <string name="choose_photos">Choose photos</string>
    <string name="and_more">and %1$d more</string>
    <string name="channel_expired_name">Expired Alerts</string>
    <string name="channel_expired_description">Notifications for expired ingredients</string>
    <string name="channel_expiring_name">Expiring Soon</string>
    <string name="channel_expiring_description">Notifications for ingredients expiring soon</string>
    <string name="channel_general_name">General</string>
    <string name="channel_general_description">General app notifications</string>
    <string name="notification_expired_title">Ingredients Expired</string>
    <string name="notification_expired_single">%1$s has expired</string>
    <string name="notification_expired_multiple">%1$d ingredients have expired</string>
    <string name="notification_expiring_title">Expiring within %1$d day(s)</string>
    <string name="notification_expiring_single">%1$s expires in %2$d day(s)</string>
    <string name="notification_expiring_multiple">%1$d ingredients are expiring soon</string>
    <string name="notification_item_expired">Important ingredient expired</string>
    <string name="notification_item_expired_content">%1$s has expired. Please handle it soon.</string>
    <string name="app_restart_title">FridgeManager restarted</string>
    <string name="app_restart_message">Expiry reminders have been scheduled again</string>
</resources>
